# langchain-gemini-ai

./: .env  .gitingore  README.md  docker-pdf.txt  main.py  pdftext.py  pyproject.toml
