[tool.poetry]
name = "langchain-python"
version = "0.1.0"
description = ""
authors = ["Qammar Zaman <qammarzaman30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.2.37"
langchain-community = "^0.2.15"
langchain-google-genai = "^1.0.10"
langchain-google-vertexai = "^1.0.10"
transformers = "^4.44.2"
langchain-chroma = "^0.1.3"
langchainhub = "^0.1.21"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
